# xvenue-arb

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml  ci.yml.disabled  deploy-configs.yml  deploy-configs.yml.disabled  deploy-grafana.yml
configs/pairtrade/: debot-pair-btceth-extended.yaml  debot-pair-btceth.yaml
configs/xvenue-arb/: debot-xvenue-arb-btc.yaml  debot-xvenue-arb-eth.yaml
deploy/: debot-pair-btceth-extended.service  debot-pair-btceth.service  debot-xvenue-arb.service  pair-data-collector.service
docs/: DESIGN.md  phase0.md
grafana/: xvenue-arb-overview.json
scripts/: .gitignore  bt_live_data.sh  check_golden.sh  debot-pair-btceth-extended.env.example  debot-pair-btceth-extended.sh  debot-pair-btceth.sh  debot-xvenue-arb.env.example  debot-xvenue-arb.sh  debot_lighter.sh  debot_lighter_execute.sh  extract_bt_replay_events.sh  log_analyzer.py  optimizer.py  pair_data_collector.py  regime_grid_search.py  regime_grid_search.sh  run_optimizer.sh  run_pairtrade.sh
scripts/phase0/: fetch_data.sh  fetch_reference.sh  run_phase0.sh  spread_analysis.py
src/: config.rs  email_client.rs  error_counter.rs  lib.rs  main.rs  prom.rs  rate_limit_notifier.rs  ws_event_defer.rs
src/pairtrade/: backtest.rs  bar.rs  config.rs  data_dump.rs  defaults.rs  entry.rs  exit.rs  history_io.rs  kalman.rs  market.rs  mod.rs  order_pricing.rs  pair_eval.rs  pnl_log.rs  regime.rs  sizing.rs  state.rs  stats.rs  status.rs  util.rs
src/ports/: live_dual.rs  mod.rs  replay_dex.rs
src/risk/: gates.rs  kill_switch.rs  manager.rs  mod.rs  persistence.rs  reference_guard.rs  skew_monitor.rs  ws_health.rs
src/trade/: mod.rs
src/trade/execution/: dex_connector_box.rs  emergency_loop.rs  extended_maker.rs  lighter_fill.rs  lighter_maker.rs  live_venue_ops.rs  maker_loop.rs  mod.rs  parallel_exit.rs  poll_loop.rs  types.rs  venue_ops.rs
src/xvenue/: bt.rs  bt_grid.rs  config.rs  data_dump.rs  emergency_handlers.rs  entry_dispatch.rs  entry_filter.rs  exit_dispatch.rs  live.rs  live_exec.rs  live_pnl.rs  live_status.rs  live_tick.rs  mod.rs  s3_mirror.rs  signal.rs  sizing.rs  spread.rs  state.rs  status.rs  test_helpers.rs
src/xvenue/status/: dashboard_format.rs  mod.rs
