[package]
name = "debot"
version = "6.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
lazy_static = "1.4.0"
rust_decimal = { version = "1.0", features = ["serde"] }
rust_decimal_macros = "1.0"
lettre = "0.11.9"
ctor = "0.2.9"
once_cell = "1.19"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_distr = "0.4"
bincode = "1.3"
libc = "0.2"

debot-utils = "1.0.*"

dex-connector = { path = "../dex-connector", default-features = false }

[dev-dependencies]
tempfile = "3"

[features]
# xvenue-arb runs both venues from a single Tokyo instance, so both SDKs
# are on by default. Requires Go/libsigner toolchain in the build env to
# link Lighter's Go shared lib — see docs/DESIGN.md §deployment.
default = ["lighter-sdk", "extended-sdk"]
lighter-sdk = ["dex-connector/lighter-sdk"]
extended-sdk = ["dex-connector/extended-sdk"]

[[bin]]
name = "debot"
path = "src/main.rs"

[[bin]]
name = "convert-data"
path = "src/bin/convert_data.rs"
